# src/swagger.json
@@ -472,6 +472,74 @@
 						}
 					}
 				}
+			},
+			"get": {
+				"operationId": "GetMyProfile",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{
+											"properties": {
+												"emailVerified": {
+													"type": "boolean"
+												},
+												"role": {
+													"$ref": "#/components/schemas/_36_Enums.Role"
+												},
+												"email": {
+													"type": "string"
+												},
+												"prenom": {
+													"type": "string"
+												},
+												"nom": {
+													"type": "string"
+												},
+												"id": {
+													"type": "number",
+													"format": "double"
+												}
+											},
+											"required": [
+												"emailVerified",
+												"role",
+												"email",
+												"prenom",
+												"nom",
+												"id"
+											],
+											"type": "object"
+										},
+										{
+											"properties": {
+												"message": {
+													"type": "string"
+												}
+											},
+											"required": [
+												"message"
+											],
+											"type": "object"
+										}
+									]
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Users"
+				],
+				"security": [
+					{
+						"jwt": []
+					}
+				],
+				"parameters": []
 			}
 		},
 		"/private": {
@@ -541,7 +609,7 @@
 				"operationId": "Register",
 				"responses": {
 					"200": {
-						"description": "un message demandant à vérifier l’adresse mail",
+						"description": "Ok",
 						"content": {
 							"application/json": {
 								"schema": {
@@ -559,20 +627,18 @@
 						}
 					}
 				},
-				"description": "Route d'inscription d'un nouvel utilisateur",
+				"description": "Inscription d'un nouvel utilisateur",
 				"tags": [
 					"Auth"
 				],
 				"security": [],
 				"parameters": [],
 				"requestBody": {
-					"description": ": données envoyées par le front (nom, prénom, email, mdp)",
 					"required": true,
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/RegisterBody",
-								"description": ": données envoyées par le front (nom, prénom, email, mdp)"
+								"$ref": "#/components/schemas/RegisterBody"
 							}
 						}
 					}
@@ -580,11 +646,11 @@
 			}
 		},
 		"/auth/verify-email": {
-			"get": {
+			"post": {
 				"operationId": "VerifyEmail",
 				"responses": {
 					"200": {
-						"description": "un message si l’adresse est bien vérifiée",
+						"description": "Ok",
 						"content": {
 							"application/json": {
 								"schema": {
@@ -602,22 +668,30 @@
 						}
 					}
 				},
-				"description": "Vérifie un email grâce à un token transmis dans l'URL",
+				"description": "Vérifie un email via un token envoyé par email\r\nAppelée après clic sur lien de vérification",
 				"tags": [
 					"Auth"
 				],
 				"security": [],
-				"parameters": [
-					{
-						"description": ": Token envoyé par email à l’utilisateur",
-						"in": "query",
-						"name": "token",
-						"required": true,
-						"schema": {
-							"type": "string"
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"properties": {
+									"token": {
+										"type": "string"
+									}
+								},
+								"required": [
+									"token"
+								],
+								"type": "object"
+							}
 						}
 					}
-				]
+				}
 			}
 		},
 		"/auth/login": {
@@ -625,7 +699,7 @@
 				"operationId": "Login",
 				"responses": {
 					"200": {
-						"description": "un token JWT (à utiliser pour les routes sécurisées)",
+						"description": "Ok",
 						"content": {
 							"application/json": {
 								"schema": {
@@ -643,20 +717,18 @@
 						}
 					}
 				},
-				"description": "Connecte un utilisateur si email vérifié et mot de passe correct",
+				"description": "Connexion utilisateur (email + mot de passe)\r\nNécessite un email vérifié",
 				"tags": [
 					"Auth"
 				],
 				"security": [],
 				"parameters": [],
 				"requestBody": {
-					"description": ": email + mot de passe",
 					"required": true,
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/LoginBody",
-								"description": ": email + mot de passe"
+								"$ref": "#/components/schemas/LoginBody"
 							}
 						}
 					}
